@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.i486.rpm 3070432 BLAKE2B e0749201a64b0602ced1a6aa895a6d4d042c9dd93ea2f12ee3d74ebe41f776d6940ec51d35bf78e271eeb1514a0de832154f37d87a78dc8b3afc3fa325c159be SHA512 d08d2148a9199e345e1986d59a33070c2a8ea85de7dcb71c05a809740793744b91af56203f5815a9adcf1a7763887afb203c0190d49ecaa4316c398d82776c91
-DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.x86_64.rpm 3069894 BLAKE2B e4dc39a548c2c97e9b13a542600c14f41257d850685c732dbc61797049d5e577e23127243e20750e4957610f86809546e2bdb267e8c4939334b8413217ae47eb SHA512 f08c6a45117c12cad1860cef707c6b53416ca21ddc3e180a10459ac5d344e3467d3a9340b61966670f0c3d1e038751a9e492891bc061078dbfcd453fe78a60a0
 DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.i486.rpm 3159861 BLAKE2B bd03ea6081f654bb2a30c7906f45412d2f022d339e37dc1b3983fb57d9ef386ae66f7d04bd099ade86bf0996dd9c1a8d8eb171ab1d32ac90473fc5fd898f22c9 SHA512 5e1dff186a5b7134a2611808ec80fef9465f85454c14b6329a38f4e17a26476170245d18d23816117d6e24f88301b8ec4f8797d8a0981a8a7050de590642f70a
 DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.x86_64.rpm 3159385 BLAKE2B 65e7ad831572ed11b408f8c2d2fc730620c10156503b0c0815ee1df52a8bb4acdcd9a30956d0b4762fb957d68f56e97cfee97a335c0fa7714dceda998f065d75 SHA512 4bdafdb77f8f3eb1e6cd9a5a34bb25cc8f8003f720bfe9d5bf232003b8d1ac07d1eb8465768f58b0ca9cbf1794f35558a20297dbcabcda70b0801a10705e8324
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.42.ebuild 1670 BLAKE2B 75d310b750f8124947d8238f711e4117af5aa772b8ee28591ab385f96a56e31e8d440ae838c12d928e203df512a2ecb908a19b6508f4db7fc01866d824b66a10 SHA512 a4c9271c9fe0c7b9bdd274f8cd5664636e632d21c24b012a4b256d54706393ee8b5f3328ab3509074eaeb7fa3909c41fa4b61797f7cdc709aecbe9b3e0043872
+DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.i486.rpm 3167531 BLAKE2B 3e5d630389312ac89433fb4b5f38e93691841b92cc9caf8cbee0a350ee709b2e5bafa508bc3d235c693b153474a93b5688c3e907e7f34581830bd46f0bf84bba SHA512 ecdbdf2a5f1a2539802a55c24dfba31bb5d36844a9860c27ab6f67f5c727df4e0f3de6a7649a0971c3cb66ea69b0d5cb9ad24910d1318866d83d1cb8e44832ad
+DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.x86_64.rpm 3166881 BLAKE2B 1c23899bbcfa3d111572351295a15be197ffc13cbee76735aec19dc4e280a0db51595ad94334e08a39de37aa89e1b433d98e119a19e18261f756605749d58dec SHA512 0e132ebff9bef91698d0a185ccd241c4d4117f03d89e1bb4b680575d1bb89d782c719140fa39f6d73316a9c7b6125b1c72d653ddfe71c8153ed58f85a49ec5b5
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.43.ebuild 1670 BLAKE2B dbfa7fd72cbb83034962b51c66e1040c95e7772fddfbd4b0166801399c6847da867d1e1fd6daf53ad9040ce4664ba088bac888ef15b5bdf5b99fe155ecb1f541 SHA512 df066bffef2564e8a0bcdb907eb7b33800cd2bfdcdca0c3be983ccd20d7c63944b17a4a823e257b2d07d4431e9c1739cf8f696dee8872f0792203551e14694e0
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.44.ebuild 1670 BLAKE2B bfd10614c8990f315b1c0a2ac1e1ae187141cb944b8387f007bfd7993deea91bd8c5e3753d51b89fd7de193db67c550e6156ec500970c19de7ebd3fb24c8884f SHA512 0c86220735e9c744dcc91125a4c4b256769fd5371e35892d3e66ce7e2f1c2a3370b13ece75150d5ed01fab220f5f01582d471924784396a3c6e7f1bebcf102f6
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
